Implement application updates
